Implemented bekker in C++

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -435,3 +435,49 @@ target_link_libraries(test_CV3_dataset_node ${catkin_LIBRARIES})
 target_link_libraries(test_CV3_dataset_node rbdl)
 target_link_libraries(test_CV3_dataset_node X11)
 set_target_properties(test_CV3_dataset_node PROPERTIES COMPILE_FLAGS "-O3 -g")
+
+
+
+
+
+
+add_executable(test_tire_model_node src/test_tire_model.cpp
+  src/GlobalParams.cpp
+  src/PlannerVisualizer.cpp
+  src/TerrainMap.cpp
+  src/JackalDynamicSolver.cpp
+  src/utils.cpp
+  )
+
+target_link_libraries(test_tire_model_node ${PCL_LIBRARIES})
+target_link_libraries(test_tire_model_node ${pluginlib_LIBRARIES})
+target_link_libraries(test_tire_model_node ${costmap_2d_LIBRARIES})
+target_link_libraries(test_tire_model_node ${move_base_LIBRARIES})
+target_link_libraries(test_tire_model_node ${OCTOMAP_LIBRARIES})
+target_link_libraries(test_tire_model_node ${OMPL_LIBRARIES})
+target_link_libraries(test_tire_model_node ${catkin_LIBRARIES})
+target_link_libraries(test_tire_model_node rbdl)
+target_link_libraries(test_tire_model_node X11)
+set_target_properties(test_tire_model_node PROPERTIES COMPILE_FLAGS "-g")
+
+
+
+
+add_executable(gen_tire_model_data_node src/gen_tire_model_data.cpp
+  src/GlobalParams.cpp
+  src/PlannerVisualizer.cpp
+  src/TerrainMap.cpp
+  src/JackalDynamicSolver.cpp
+  src/utils.cpp
+  )
+
+target_link_libraries(gen_tire_model_data_node ${PCL_LIBRARIES})
+target_link_libraries(gen_tire_model_data_node ${pluginlib_LIBRARIES})
+target_link_libraries(gen_tire_model_data_node ${costmap_2d_LIBRARIES})
+target_link_libraries(gen_tire_model_data_node ${move_base_LIBRARIES})
+target_link_libraries(gen_tire_model_data_node ${OCTOMAP_LIBRARIES})
+target_link_libraries(gen_tire_model_data_node ${OMPL_LIBRARIES})
+target_link_libraries(gen_tire_model_data_node ${catkin_LIBRARIES})
+target_link_libraries(gen_tire_model_data_node rbdl)
+target_link_libraries(gen_tire_model_data_node X11)
+set_target_properties(gen_tire_model_data_node PROPERTIES COMPILE_FLAGS "-g")
