WOWEEE SHIT FUCK SHIT FUCK SHIT

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -557,3 +557,87 @@ target_link_libraries(test_residual_net_node rbdl)
 set_target_properties(test_residual_net_node PROPERTIES COMPILE_FLAGS "-O3 -g")
 
 
+
+add_executable(test_hybrid_model_CV3_node
+  src/test_hybrid_model_CV3.cpp
+  src/GlobalParams.cpp
+  src/TerrainMap.cpp
+  src/JackalDynamicSolver.cpp
+  src/utils.cpp
+  src/NNJackalModel.cpp
+  src/HybridModel.cpp
+  )
+
+target_link_libraries(test_hybrid_model_CV3_node ${OMPL_LIBRARIES})
+target_link_libraries(test_hybrid_model_CV3_node ${PCL_LIBRARIES})
+target_link_libraries(test_hybrid_model_CV3_node ${catkin_LIBRARIES})
+target_link_libraries(test_hybrid_model_CV3_node rbdl)
+set_target_properties(test_hybrid_model_CV3_node PROPERTIES COMPILE_FLAGS "-O3 -g")
+
+
+
+
+add_executable(test_hybrid_model_LD3_node
+  src/test_hybrid_model_LD3.cpp
+  src/GlobalParams.cpp
+  src/TerrainMap.cpp
+  src/JackalDynamicSolver.cpp
+  src/utils.cpp
+  src/NNJackalModel.cpp
+  src/HybridModel.cpp
+  )
+
+target_link_libraries(test_hybrid_model_LD3_node ${OMPL_LIBRARIES})
+target_link_libraries(test_hybrid_model_LD3_node ${PCL_LIBRARIES})
+target_link_libraries(test_hybrid_model_LD3_node ${catkin_LIBRARIES})
+target_link_libraries(test_hybrid_model_LD3_node rbdl)
+set_target_properties(test_hybrid_model_LD3_node PROPERTIES COMPILE_FLAGS "-O3 -g")
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+add_executable(test_linear_model_CV3_node
+  src/test_linear_model_CV3.cpp
+  src/GlobalParams.cpp
+  src/TerrainMap.cpp
+  src/JackalDynamicSolver.cpp
+  src/utils.cpp
+  src/LinearModel.cpp
+  )
+
+target_link_libraries(test_linear_model_CV3_node ${OMPL_LIBRARIES})
+target_link_libraries(test_linear_model_CV3_node ${PCL_LIBRARIES})
+target_link_libraries(test_linear_model_CV3_node ${catkin_LIBRARIES})
+target_link_libraries(test_linear_model_CV3_node rbdl)
+set_target_properties(test_linear_model_CV3_node PROPERTIES COMPILE_FLAGS "-O3 -g")
+
+
+
+
+add_executable(test_linear_model_LD3_node
+  src/test_linear_model_LD3.cpp
+  src/GlobalParams.cpp
+  src/TerrainMap.cpp
+  src/utils.cpp
+  src/LinearModel.cpp
+  src/TerrainMap.cpp
+  src/JackalDynamicSolver.cpp
+  )
+
+target_link_libraries(test_linear_model_LD3_node ${OMPL_LIBRARIES})
+target_link_libraries(test_linear_model_LD3_node ${PCL_LIBRARIES})
+target_link_libraries(test_linear_model_LD3_node ${catkin_LIBRARIES})
+target_link_libraries(test_linear_model_LD3_node rbdl)
+set_target_properties(test_linear_model_LD3_node PROPERTIES COMPILE_FLAGS "-O3 -g")
+
+
